# afs

./: .gitignore  README.md  pyproject.toml  run.sh  test_inference.py  test_ndi.py  test_thread.py  test_writer.py  test_ws.py
Model/: # KINETIC APERTURE | System Settings  Untitled-2  check.py  face_model.py  fastapi_app.py  nano.py  new.py  objtrack.py  record_scan.py  seld.py  seld_sounddevice.py  test_audio_stream.py
afs/: README.md  pubspec.yaml
afs/android/app/: build.gradle.kts
afs/ios/Runner/: Info.plist
afs/ios/Runner.xcodeproj/: project.pbxproj
afs/lib/: main.dart  theme.dart
afs/lib/screens/: login_screen.dart  onboarding_screen.dart  settings_screen.dart  shared_widgets.dart  signup_screen.dart
afs/lib/services/: auth_service.dart  config.dart
afs/lib/widgets/: afs_controls_bar.dart  hud_stat_tile.dart  quick_settings_drawer.dart  (+1 more)
afs/linux/: CMakeLists.txt
afs/test/: widget_test.dart
afs/web/: index.html  manifest.json
afs/windows/: CMakeLists.txt
backend/: .dockerignore  .env  .env.example  API_DOCS.md  Dockerfile  README.md  pyproject.toml  requirements.txt  server.py
backend/Model/: embeddings_cache.pkl
backend/av_enrollment/: config.py  doa_estimator.py  gatekeeper.py  models.py  mouth_tracker.py  orchestrator.py  overlapped_detector.py  path_validator.py  profile_store.py  voice_enroller.py
backend/documents/: REFACTORING_SUMMARY.md
backend/services/: audio_processing.py  face_recognition.py  multi_tracker.py  single_tracker.py
backend/test/: test_audio_api.py  test_create_user.py  test_mongodb.py  test_vcam.py
(+9 files in other folders)
