[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepface>=0.0.99",
    "fastapi>=0.135.3",
    "pymongo>=4.9.0",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "tf-keras>=2.21.0",
    "ultralytics>=8.4.33",
    "uvicorn>=0.43.0",
    "websockets>=16.0",
    "lap>=0.5.13",
    "bcrypt>=5.0.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "torchaudio>=2.11.0",
    "transformers>=5.7.0",
    "pyserial>=3.5",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.135.3",
]
